src/parser/parser.output
Terminals unused in grammar

   OTRO


Grammar

    0 $accept: json $end

    1 json: BRACE_OPEN json_atributos BRACE_CLOSE

    2 json_atributos: empresas COMMA version COMMA firma_digital
    3               | empresas COMMA firma_digital COMMA version
    4               | version COMMA empresas COMMA firma_digital
    5               | version COMMA firma_digital COMMA empresas
    6               | firma_digital COMMA empresas COMMA version
    7               | firma_digital COMMA version COMMA empresas
    8               | version COMMA empresas
    9               | firma_digital COMMA empresas
   10               | empresas COMMA firma_digital
   11               | empresas COMMA version
   12               | empresas

   13 version: K_VERSION COLON STRING
   14        | K_VERSION COLON NULL_VALUE

   15 firma_digital: K_FIRMA_DIGITAL COLON STRING
   16              | K_FIRMA_DIGITAL COLON NULL_VALUE

   17 empresas: K_EMPRESAS COLON empresas_lista

   18 empresas_lista: BRACKET_OPEN empresa_nt BRACKET_CLOSE

   19 empresa_nt: empresa COMMA empresa_nt
   20           | empresa

   21 empresa: BRACE_OPEN empresa_atributos BRACE_CLOSE

   22 empresa_atributos: nombre_empresa COMMA fundacion COMMA direccion COMMA ingresos_anuales COMMA pyme COMMA link COMMA departamentos
   23                  | nombre_empresa COMMA fundacion COMMA direccion COMMA ingresos_anuales COMMA pyme COMMA departamentos
   24                  | nombre_empresa COMMA fundacion COMMA ingresos_anuales COMMA pyme COMMA link COMMA departamentos
   25                  | nombre_empresa COMMA fundacion COMMA ingresos_anuales COMMA pyme COMMA departamentos

   26 nombre_empresa: K_NOMBRE_EMPRESA COLON STRING

   27 fundacion: K_FUNDACION COLON INTEGER

   28 direccion: K_DIRECCION COLON BRACE_OPEN direccion_atributos BRACE_CLOSE
   29          | K_DIRECCION COLON BRACE_OPEN BRACE_CLOSE
   30          | K_DIRECCION COLON NULL_VALUE

   31 ingresos_anuales: K_INGRESOS_ANUALES COLON FLOAT

   32 pyme: K_PYME COLON BOOL

   33 link: K_LINK COLON URL
   34     | K_LINK COLON NULL_VALUE

   35 direccion_atributos: calle COMMA ciudad COMMA pais
   36                    | ciudad COMMA calle COMMA pais
   37                    | pais COMMA calle COMMA ciudad
   38                    | calle COMMA pais COMMA ciudad
   39                    | ciudad COMMA pais COMMA calle
   40                    | pais COMMA ciudad COMMA calle

   41 calle: K_CALLE COLON STRING

   42 ciudad: K_CIUDAD COLON STRING

   43 pais: K_PAIS COLON STRING

   44 departamentos: K_DEPARTAMENTOS COLON departamentos_lista

   45 departamentos_lista: BRACKET_OPEN departamento_nt BRACKET_CLOSE

   46 departamento_nt: departamento COMMA departamento_nt
   47                | departamento

   48 departamento: BRACE_OPEN departamento_atributos BRACE_CLOSE

   49 departamento_atributos: nombre_departamento COMMA jefe_departamento COMMA subdepartamentos
   50                       | jefe_departamento COMMA nombre_departamento COMMA subdepartamentos
   51                       | subdepartamentos COMMA nombre_departamento COMMA jefe_departamento
   52                       | nombre_departamento COMMA subdepartamentos COMMA jefe_departamento
   53                       | jefe_departamento COMMA subdepartamentos COMMA nombre_departamento
   54                       | subdepartamentos COMMA jefe_departamento COMMA nombre_departamento

   55 nombre_departamento: K_NOMBRE COLON STRING

   56 jefe_departamento: K_JEFE COLON STRING
   57                  | K_JEFE COLON NULL_VALUE

   58 subdepartamentos: K_SUBDEPARTAMENTOS COLON subdepartamentos_lista

   59 subdepartamentos_lista: BRACKET_OPEN subdepartamento_nt BRACKET_CLOSE

   60 subdepartamento_nt: subdepartamento COMMA subdepartamento_nt
   61                   | subdepartamento

   62 subdepartamento: BRACE_OPEN subdepartamento_atributos BRACE_CLOSE

   63 subdepartamento_atributos: nombre_subdepartamento COMMA jefe_subdepartamento COMMA empleados
   64                          | jefe_subdepartamento COMMA nombre_subdepartamento COMMA empleados
   65                          | empleados COMMA nombre_subdepartamento COMMA jefe_subdepartamento
   66                          | nombre_subdepartamento COMMA empleados COMMA jefe_subdepartamento
   67                          | jefe_subdepartamento COMMA empleados COMMA nombre_subdepartamento
   68                          | empleados COMMA jefe_subdepartamento COMMA nombre_subdepartamento
   69                          | nombre_subdepartamento COMMA jefe_subdepartamento
   70                          | jefe_subdepartamento COMMA nombre_subdepartamento
   71                          | nombre_subdepartamento COMMA empleados
   72                          | empleados COMMA nombre_subdepartamento
   73                          | nombre_subdepartamento

   74 nombre_subdepartamento: K_NOMBRE COLON STRING

   75 jefe_subdepartamento: K_JEFE COLON STRING
   76                     | K_JEFE COLON NULL_VALUE

   77 empleados: K_EMPLEADOS COLON empleados_lista

   78 empleados_lista: BRACKET_OPEN empleado_nt BRACKET_CLOSE
   79                | BRACKET_OPEN BRACKET_CLOSE
   80                | NULL_VALUE

   81 empleado_nt: empleado COMMA empleado_nt
   82            | empleado

   83 empleado: BRACE_OPEN empleado_atributos BRACE_CLOSE

   84 empleado_atributos: nombre_empleado COMMA edad COMMA cargo COMMA salario COMMA activo COMMA fecha_contratacion COMMA proyectos
   85                   | nombre_empleado COMMA edad COMMA cargo COMMA salario COMMA activo COMMA fecha_contratacion
   86                   | nombre_empleado COMMA cargo COMMA salario COMMA activo COMMA fecha_contratacion COMMA proyectos
   87                   | nombre_empleado COMMA cargo COMMA salario COMMA activo COMMA fecha_contratacion

   88 nombre_empleado: K_NOMBRE COLON STRING

   89 edad: K_EDAD COLON INTEGER
   90     | K_EDAD COLON NULL_VALUE

   91 cargo: K_CARGO COLON CARGO

   92 salario: K_SALARIO COLON FLOAT

   93 activo: K_ACTIVO COLON BOOL

   94 fecha_contratacion: K_FECHA_CONTRATACION COLON DATE

   95 proyectos: K_PROYECTOS COLON proyectos_lista

   96 proyectos_lista: BRACKET_OPEN proyecto_nt BRACKET_CLOSE
   97                | BRACKET_OPEN BRACKET_CLOSE
   98                | NULL_VALUE

   99 proyecto_nt: proyecto COMMA proyecto_nt
  100            | proyecto

  101 proyecto: BRACE_OPEN proyecto_atributos BRACE_CLOSE

  102 proyecto_atributos: nombre_proyecto COMMA estado COMMA fecha_inicio COMMA fecha_fin
  103                   | nombre_proyecto COMMA estado COMMA fecha_inicio
  104                   | nombre_proyecto COMMA fecha_inicio COMMA fecha_fin
  105                   | nombre_proyecto COMMA fecha_inicio

  106 nombre_proyecto: K_NOMBRE COLON STRING

  107 estado: K_ESTADO COLON ESTADO
  108       | K_ESTADO COLON NULL_VALUE

  109 fecha_inicio: K_FECHA_INICIO COLON DATE

  110 fecha_fin: K_FECHA_FIN COLON DATE
  111          | K_FECHA_FIN COLON NULL_VALUE


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMA (258) 2 3 4 5 6 7 8 9 10 11 19 22 23 24 25 35 36 37 38 39 40
    46 49 50 51 52 53 54 60 63 64 65 66 67 68 69 70 71 72 81 84 85
    86 87 99 102 103 104 105
COLON (259) 13 14 15 16 17 26 27 28 29 30 31 32 33 34 41 42 43 44 55
    56 57 58 74 75 76 77 88 89 90 91 92 93 94 95 106 107 108 109 110
    111
BRACE_OPEN (260) 1 21 28 29 48 62 83 101
BRACE_CLOSE (261) 1 21 28 29 48 62 83 101
BRACKET_OPEN (262) 18 45 59 78 79 96 97
BRACKET_CLOSE (263) 18 45 59 78 79 96 97
STRING (264) 13 15 26 41 42 43 55 56 74 75 88 106
DATE (265) 94 109 110
BOOL (266) 32 93
FLOAT (267) 31 92
INTEGER (268) 27 89
URL (269) 33
CARGO (270) 91
ESTADO (271) 107
NULL_VALUE (272) 14 16 30 34 57 76 80 90 98 108 111
K_VERSION (273) 13 14
K_FIRMA_DIGITAL (274) 15 16
K_EMPRESAS (275) 17
K_NOMBRE_EMPRESA (276) 26
K_FUNDACION (277) 27
K_DIRECCION (278) 28 29 30
K_INGRESOS_ANUALES (279) 31
K_PYME (280) 32
K_LINK (281) 33 34
K_CALLE (282) 41
K_CIUDAD (283) 42
K_PAIS (284) 43
K_DEPARTAMENTOS (285) 44
K_NOMBRE (286) 55 74 88 106
K_JEFE (287) 56 57 75 76
K_SUBDEPARTAMENTOS (288) 58
K_EMPLEADOS (289) 77
K_EDAD (290) 89 90
K_CARGO (291) 91
K_SALARIO (292) 92
K_ACTIVO (293) 93
K_FECHA_CONTRATACION (294) 94
K_PROYECTOS (295) 95
K_ESTADO (296) 107 108
K_FECHA_INICIO (297) 109
K_FECHA_FIN (298) 110 111
OTRO (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
json (46)
    on left: 1, on right: 0
json_atributos (47)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1
version (48)
    on left: 13 14, on right: 2 3 4 5 6 7 8 11
firma_digital (49)
    on left: 15 16, on right: 2 3 4 5 6 7 9 10
empresas (50)
    on left: 17, on right: 2 3 4 5 6 7 8 9 10 11 12
empresas_lista (51)
    on left: 18, on right: 17
empresa_nt (52)
    on left: 19 20, on right: 18 19
empresa (53)
    on left: 21, on right: 19 20
empresa_atributos (54)
    on left: 22 23 24 25, on right: 21
nombre_empresa (55)
    on left: 26, on right: 22 23 24 25
fundacion (56)
    on left: 27, on right: 22 23 24 25
direccion (57)
    on left: 28 29 30, on right: 22 23
ingresos_anuales (58)
    on left: 31, on right: 22 23 24 25
pyme (59)
    on left: 32, on right: 22 23 24 25
link (60)
    on left: 33 34, on right: 22 24
direccion_atributos (61)
    on left: 35 36 37 38 39 40, on right: 28
calle (62)
    on left: 41, on right: 35 36 37 38 39 40
ciudad (63)
    on left: 42, on right: 35 36 37 38 39 40
pais (64)
    on left: 43, on right: 35 36 37 38 39 40
departamentos (65)
    on left: 44, on right: 22 23 24 25
departamentos_lista (66)
    on left: 45, on right: 44
departamento_nt (67)
    on left: 46 47, on right: 45 46
departamento (68)
    on left: 48, on right: 46 47
departamento_atributos (69)
    on left: 49 50 51 52 53 54, on right: 48
nombre_departamento (70)
    on left: 55, on right: 49 50 51 52 53 54
jefe_departamento (71)
    on left: 56 57, on right: 49 50 51 52 53 54
subdepartamentos (72)
    on left: 58, on right: 49 50 51 52 53 54
subdepartamentos_lista (73)
    on left: 59, on right: 58
subdepartamento_nt (74)
    on left: 60 61, on right: 59 60
subdepartamento (75)
    on left: 62, on right: 60 61
subdepartamento_atributos (76)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
nombre_subdepartamento (77)
    on left: 74, on right: 63 64 65 66 67 68 69 70 71 72 73
jefe_subdepartamento (78)
    on left: 75 76, on right: 63 64 65 66 67 68 69 70
empleados (79)
    on left: 77, on right: 63 64 65 66 67 68 71 72
empleados_lista (80)
    on left: 78 79 80, on right: 77
empleado_nt (81)
    on left: 81 82, on right: 78 81
empleado (82)
    on left: 83, on right: 81 82
empleado_atributos (83)
    on left: 84 85 86 87, on right: 83
nombre_empleado (84)
    on left: 88, on right: 84 85 86 87
edad (85)
    on left: 89 90, on right: 84 85
cargo (86)
    on left: 91, on right: 84 85 86 87
salario (87)
    on left: 92, on right: 84 85 86 87
activo (88)
    on left: 93, on right: 84 85 86 87
fecha_contratacion (89)
    on left: 94, on right: 84 85 86 87
proyectos (90)
    on left: 95, on right: 84 86
proyectos_lista (91)
    on left: 96 97 98, on right: 95
proyecto_nt (92)
    on left: 99 100, on right: 96 99
proyecto (93)
    on left: 101, on right: 99 100
proyecto_atributos (94)
    on left: 102 103 104 105, on right: 101
nombre_proyecto (95)
    on left: 106, on right: 102 103 104 105
estado (96)
    on left: 107 108, on right: 102 103
fecha_inicio (97)
    on left: 109, on right: 102 103 104 105
fecha_fin (98)
    on left: 110 111, on right: 102 104


state 0

    0 $accept: . json $end

    BRACE_OPEN  shift, and go to state 1

    json  go to state 2


state 1

    1 json: BRACE_OPEN . json_atributos BRACE_CLOSE

    K_VERSION        shift, and go to state 3
    K_FIRMA_DIGITAL  shift, and go to state 4
    K_EMPRESAS       shift, and go to state 5

    json_atributos  go to state 6
    version         go to state 7
    firma_digital   go to state 8
    empresas        go to state 9


state 2

    0 $accept: json . $end

    $end  shift, and go to state 10


state 3

   13 version: K_VERSION . COLON STRING
   14        | K_VERSION . COLON NULL_VALUE

    COLON  shift, and go to state 11


state 4

   15 firma_digital: K_FIRMA_DIGITAL . COLON STRING
   16              | K_FIRMA_DIGITAL . COLON NULL_VALUE

    COLON  shift, and go to state 12


state 5

   17 empresas: K_EMPRESAS . COLON empresas_lista

    COLON  shift, and go to state 13


state 6

    1 json: BRACE_OPEN json_atributos . BRACE_CLOSE

    BRACE_CLOSE  shift, and go to state 14


state 7

    4 json_atributos: version . COMMA empresas COMMA firma_digital
    5               | version . COMMA firma_digital COMMA empresas
    8               | version . COMMA empresas

    COMMA  shift, and go to state 15


state 8

    6 json_atributos: firma_digital . COMMA empresas COMMA version
    7               | firma_digital . COMMA version COMMA empresas
    9               | firma_digital . COMMA empresas

    COMMA  shift, and go to state 16


state 9

    2 json_atributos: empresas . COMMA version COMMA firma_digital
    3               | empresas . COMMA firma_digital COMMA version
   10               | empresas . COMMA firma_digital
   11               | empresas . COMMA version
   12               | empresas .

    COMMA  shift, and go to state 17

    $default  reduce using rule 12 (json_atributos)


state 10

    0 $accept: json $end .

    $default  accept


state 11

   13 version: K_VERSION COLON . STRING
   14        | K_VERSION COLON . NULL_VALUE

    STRING      shift, and go to state 18
    NULL_VALUE  shift, and go to state 19


state 12

   15 firma_digital: K_FIRMA_DIGITAL COLON . STRING
   16              | K_FIRMA_DIGITAL COLON . NULL_VALUE

    STRING      shift, and go to state 20
    NULL_VALUE  shift, and go to state 21


state 13

   17 empresas: K_EMPRESAS COLON . empresas_lista

    BRACKET_OPEN  shift, and go to state 22

    empresas_lista  go to state 23


state 14

    1 json: BRACE_OPEN json_atributos BRACE_CLOSE .

    $default  reduce using rule 1 (json)


state 15

    4 json_atributos: version COMMA . empresas COMMA firma_digital
    5               | version COMMA . firma_digital COMMA empresas
    8               | version COMMA . empresas

    K_FIRMA_DIGITAL  shift, and go to state 4
    K_EMPRESAS       shift, and go to state 5

    firma_digital  go to state 24
    empresas       go to state 25


state 16

    6 json_atributos: firma_digital COMMA . empresas COMMA version
    7               | firma_digital COMMA . version COMMA empresas
    9               | firma_digital COMMA . empresas

    K_VERSION   shift, and go to state 3
    K_EMPRESAS  shift, and go to state 5

    version   go to state 26
    empresas  go to state 27


state 17

    2 json_atributos: empresas COMMA . version COMMA firma_digital
    3               | empresas COMMA . firma_digital COMMA version
   10               | empresas COMMA . firma_digital
   11               | empresas COMMA . version

    K_VERSION        shift, and go to state 3
    K_FIRMA_DIGITAL  shift, and go to state 4

    version        go to state 28
    firma_digital  go to state 29


state 18

   13 version: K_VERSION COLON STRING .

    $default  reduce using rule 13 (version)


state 19

   14 version: K_VERSION COLON NULL_VALUE .

    $default  reduce using rule 14 (version)


state 20

   15 firma_digital: K_FIRMA_DIGITAL COLON STRING .

    $default  reduce using rule 15 (firma_digital)


state 21

   16 firma_digital: K_FIRMA_DIGITAL COLON NULL_VALUE .

    $default  reduce using rule 16 (firma_digital)


state 22

   18 empresas_lista: BRACKET_OPEN . empresa_nt BRACKET_CLOSE

    BRACE_OPEN  shift, and go to state 30

    empresa_nt  go to state 31
    empresa     go to state 32


state 23

   17 empresas: K_EMPRESAS COLON empresas_lista .

    $default  reduce using rule 17 (empresas)


state 24

    5 json_atributos: version COMMA firma_digital . COMMA empresas

    COMMA  shift, and go to state 33


state 25

    4 json_atributos: version COMMA empresas . COMMA firma_digital
    8               | version COMMA empresas .

    COMMA  shift, and go to state 34

    $default  reduce using rule 8 (json_atributos)


state 26

    7 json_atributos: firma_digital COMMA version . COMMA empresas

    COMMA  shift, and go to state 35


state 27

    6 json_atributos: firma_digital COMMA empresas . COMMA version
    9               | firma_digital COMMA empresas .

    COMMA  shift, and go to state 36

    $default  reduce using rule 9 (json_atributos)


state 28

    2 json_atributos: empresas COMMA version . COMMA firma_digital
   11               | empresas COMMA version .

    COMMA  shift, and go to state 37

    $default  reduce using rule 11 (json_atributos)


state 29

    3 json_atributos: empresas COMMA firma_digital . COMMA version
   10               | empresas COMMA firma_digital .

    COMMA  shift, and go to state 38

    $default  reduce using rule 10 (json_atributos)


state 30

   21 empresa: BRACE_OPEN . empresa_atributos BRACE_CLOSE

    K_NOMBRE_EMPRESA  shift, and go to state 39

    empresa_atributos  go to state 40
    nombre_empresa     go to state 41


state 31

   18 empresas_lista: BRACKET_OPEN empresa_nt . BRACKET_CLOSE

    BRACKET_CLOSE  shift, and go to state 42


state 32

   19 empresa_nt: empresa . COMMA empresa_nt
   20           | empresa .

    COMMA  shift, and go to state 43

    $default  reduce using rule 20 (empresa_nt)


state 33

    5 json_atributos: version COMMA firma_digital COMMA . empresas

    K_EMPRESAS  shift, and go to state 5

    empresas  go to state 44


state 34

    4 json_atributos: version COMMA empresas COMMA . firma_digital

    K_FIRMA_DIGITAL  shift, and go to state 4

    firma_digital  go to state 45


state 35

    7 json_atributos: firma_digital COMMA version COMMA . empresas

    K_EMPRESAS  shift, and go to state 5

    empresas  go to state 46


state 36

    6 json_atributos: firma_digital COMMA empresas COMMA . version
